# pks-resource

./: .gitignore  Makefile  README.md  kg-source-data.ipynb  ols-grounding.ipynb  pks_utils.py  primary-knowledge-sources.md  primary-knowledge-sources.yml  pyproject.toml
mappings/: reusabledata-infores-mappings.sssom.tsv
sources/: matrixcurated.tsv  matrixreviews.tsv
src/: croissant_utils.py  kg-source-croissant.ipynb  matrix-kg.croissant.json
src/croissant-templates/: matrix-kg.croissant.json.jinja2
src/pks_resource.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
