[project]
name = "pks-resource"
version = "0.1.0"
description = "Primary Knowledge Sources Resource Analysis"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.0",
    "pandas>=2.0.0",
    "requests>=2.25.0",
    "jinja2>=3.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "linkml",
    "mlcroissant",
    "matrix_schema",
    "python-dotenv",
    "tabulate"
]

[tool.uv.workspace]
members = []